# python-project-52

./: .gitignore  Makefile  README.md  build.sh  manage.py  pyproject.toml  ruff.toml
.github/workflows/: coverage.yml
labels/: views.py
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_created_at_and_more.py  0003_alter_status_created_at_alter_status_name.py
task_manager/statuses/templates/statuses/: confirm_delete.html  form.html  list.html
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_name.py
task_manager/tasks/templates/: login.html  register.html
task_manager/tasks/templates/tasks/: login.html  register.html
task_manager/templates/: base.html  home.html  index.html  login.html  register.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: delete.html  form.html  index.html  list.html  login.html  register.html  update.html
task_manager/users/: form.html  forms.py  login.html  urls.py  views.py
task_manager/users/templates/: confirm_delete.html  form.html  login.html
(+1 files in other folders)
