[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=5.2.11",
    "django-bootstrap5>=26.2",
    "django-filter>=24.2",
    "gunicorn>=25.0.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rollbar>=0.16.3",
]
